tests/ui/struct_use_after_move.stderr
Error [E0121]: `p` was given away earlier, so it can't be used here
  --> tests/ui/struct_use_after_move.lex:12:11
    |
 12 |     print(p.x);
    |           ^
 Why: after a value moves somewhere else, the old name no longer holds it
 Fix: give away a copy instead (`p.clone()`) where it moved
