tests/ui/struct_use_after_move.jet
struct Point {
    x: Int;
}

fn consume(take p: Point) {
    print(p.x);
}

fn main() {
    val p = Point { x: 1 };
    consume(take p);
    print(p.x);
}
